enable mod_rewrite

--- a/docker/vhost.conf
+++ b/docker/vhost.conf
@@ -1,9 +1,28 @@
 <VirtualHost *:80>
 	DocumentRoot /var/www/html/public
-
 	<Directory /var/www/html/public>
-		AllowOverride All
-		Require all granted
+		AllowOverride none
+		<IfModule mod_rewrite.c>
+			<IfModule mod_negotiation.c>
+				Options -MultiViews -Indexes
+			</IfModule>
+
+			RewriteEngine On
+
+			# Handle Authorization Header
+			RewriteCond %{HTTP:Authorization} .
+			RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
+
+			# Redirect Trailing Slashes If Not A Folder...
+			RewriteCond %{REQUEST_FILENAME} !-d
+			RewriteCond %{REQUEST_URI} (.+)/$
+			RewriteRule ^ %1 [L,R=301]
+
+			# Handle Front Controller...
+			RewriteCond %{REQUEST_FILENAME} !-d
+			RewriteCond %{REQUEST_FILENAME} !-f
+			RewriteRule ^ index.php [L]
+		</IfModule>
 	</Directory>
 
 	ErrorLog ${APACHE_LOG_DIR}/error.log
