add mysql image

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,19 @@ services:
       dockerfile: docker/Dockerfile
     ports:
       - 8080:80
+  mysql:
+    container_name: laravel-mysql
+    image: mysql:5.7
+    ports:
+      - 13306:3306
+    volumes:
+      - mysql:/var/lib/mysql
+    environment:
+      MYSQL_DATABASE: docker-app
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_USER: homestead
+      MYSQL_PASSWORD: secret
+
+volumes:
+  mysql:
+    driver: "local"
