--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,16 @@ services:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_USER: homestead
       MYSQL_PASSWORD: secret
+  redis:
+    container_name: laravel-redis
+    image: redis:4-alpine
+    ports:
+      - 16379:6379
+    volumes:
+      - redis:/data
 
 volumes:
   mysql:
+    driver: "local"
+  redis:
     driver: "local"
